--- a/app/src/main/res/layout/fragment_mine_share_device.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device.xml
@@ -39,7 +39,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle_share_device_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
             android:id="@+id/ll_no_device"
