--- a/app/src/main/res/layout/fragment_mine_share_device_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device_items.xml
@@ -28,12 +28,13 @@
                 android:textSize="16sp"
                 android:textColor="@color/color_333333"
                 android:text="云相框"
+                android:maxLength="14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/tv_has_share_num"
-                android:paddingTop="8dp"
+                android:paddingTop="7dp"
                 android:layout_below="@id/tv_share_device_name"
                 android:textSize="12sp"
                 android:textColor="@color/color_8c8c8c"
