--- a/app/src/main/res/layout/frgment_mine_share_to_contact.xml
+++ b/app/src/main/res/layout/frgment_mine_share_to_contact.xml
@@ -40,9 +40,10 @@
                 android:id="@+id/et_search_contact"
                 android:visibility="gone"
                 android:textColor="@color/color_white"
-                android:textColorHint="@color/color_white"
+                android:textColorHint="#60ffffff"
                 android:background="@null"
                 android:hint="@string/Search"
+                android:textCursorDrawable="@drawable/search_friend_cursor_color"
                 android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
